# tmux-capture

./: .gitignore  CHANGELOG.md  Makefile  README.md  install.sh  pyproject.toml  tmux-capture  tmux-capture-window.sh  tmux-capture.plugin.zsh  tmux-capture.tmux  tmux.conf.example
scripts/: capture.sh
shell-capture/: DESIGN.md  README.md  ansi-test.sh  render-test.sh  shell-capture  test.md
shell-capture/scripts/: ansi-sequence-test.py
tests/: __init__.py  conftest.py  test_ansi_handling.py  test_cjk_width.py  test_clipboard_operations.py  test_content_grouping.py  test_hint_generation.py  test_main.py  test_overlap_resolution.py  test_regex_patterns.py  test_tmux_integration.py  test_ui.py
